--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=alexalibrahim_test-agent
 sonar.organization=alexalibrahim
+sonar.token=ba701e75ee97e350ae99d84cc99fbff07cf67b75
 
 
 # This is the name and version displayed in the SonarCloud UI.
